# tg-monitor

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  UPGRADE_PROGRESS.md  config.example.yaml  config.yaml  docker-compose.yml  docker-entrypoint.sh  list_groups.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
frontend/: .npmrc  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chatbot.tsx  CyberCharts.tsx  GraphPage.tsx  GroupList.tsx  LinksPage.tsx  MessageList.tsx  SearchPage.tsx  SettingsPage.tsx  Sidebar.tsx  StatCards.tsx  SummariesPage.tsx  TenantsPage.tsx  Topbar.tsx
src/: alerts.py  bot.py  cli.py  collector.py  config.py  dashboard.py  database.py  rag.py  session_pool.py  summarizer.py
src/bot_handlers/: __init__.py  actions.py  callbacks.py  commands.py  utils.py
src/db/: alerts.py  analytics.py  core.py  groups.py  links.py  messages.py  settings.py  tenants.py
src/web/static/: index.html
src/web/static/assets/: index-B71kIlLk.js  index-B9juz-Bo.js  index-BTLcdNfB.css  index-C0jw6hVm.css  index-CTyqq4I_.css  index-DpVUU5Y4.js  index-EGxYXFy6.js  index-w-MYBUg7.css
static/: index.html
static/assets/: index-ChcgH4-Q.js  index-D7Vjsc4F.js  index-DAhBUD1C.js  index-DSLijG7n.css  index-DcdycvRd.css  index-DlSEoPpJ.js  index-Dw9RfkCK.css  index-MdAHF5Yp.js  index-QqkNBjzl.css  index-auo7zzVO.js  index-x1EdyEuj.css
